--- a/config/starship/config.toml
+++ b/config/starship/config.toml
@@ -43,7 +43,7 @@ format = "[$duration]($style) "
 style = "yellow"
 
 [python]
-format = "[$virtualenv]($style) "
+format='[(\($virtualenv\) )]($style)'
 style = "bright-black"
 
 [conda]
